ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript6/Iterators/parserForOfStatement2/input.ts.stderr
error: Variable declaration list cannot be empty
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript6/Iterators/parserForOfStatement2/input.ts:2:9
  |
2 | for (var of X) {
  |         ^

